bad/assign_literal_neg_int_string.example_compiler_output
ERROR
[1mbad/assign_literal_neg_int_string.lat:4:6: [1;31merror: [0;1mleft side is not assignable[m
	-42 = "";
	    [1;32m^[m
[1mbad/assign_literal_neg_int_string.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	-42 = "";
	[1;32m^[m
